repared everything
swagger had errors
api wasn't connected
index had redundant code
